# st-home

./: .cursorignore  .editorconfig  .env.defaults  .env.development  .gitignore  .prettierignore  Dockerfile  Makefile  NOTICE  Procfile  README.md  SECURITY.md  changes.patch  cron.json  csp.config.mjs  docker-compose.yml  drizzle.config.ts  instrumentation.ts  lint-staged.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.mts  vitest.config.ts
.github/workflows/: deploy.yml  tests.yml
.husky/: pre-commit
data/: Dockerfile  Dockerfile.dev  Dockerfile.local  broker.py  celery_app.py  dashboard.py  gencommunes.py  pyproject.toml  redis_conn.py  requirements.txt  test-communes.json  worker.py
data/dumps-sample/: communes.json  epcis.json  operators.json  organizations.json  sample-mairies.json  sample-structures.json  service_usages.json  services.json
data/tasks/: __init__.py  check_dns.py  check_website.py  conformance.py  db.py  defs.py  dumps.py  historize.py  lib.py  queue_all.py  repertoire.py  sync.py  sync_repertoire.py
data/tests/: conftest.py  test_check_dns.py  test_check_website.py  test_communes.py  test_conformance.py  test_lib.py
drizzle/: 0000_lame_adam_warlock.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
public/: fake-data.json  parent_areas.json  siren_coordinates.json
public/geojson/: france.json  regions.json
public/geojson/communes_par_departement/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  2A.json  2B.json  30.json  31.json  (+69 more)
scripts/: check-actions.sh  db-check.ts  db-drop.ts  db-migrate.ts  db-seed.ts  generate-fake-data.js  prebuild.ts  scalingo_pgdump.sh  scalingo_postcompile  scalingo_postfrontend  scalingo_run_web  seed-communes.ts  seed-db.ts  seo-check.mjs  warm-api.ts
scripts/__tests__/: prebuild.test.ts
src/: mdx-components.tsx
src/caddy/: Caddyfile
src/components/: BackToTop.tsx  CommuneSearch.tsx  ContactUs.tsx  CopyToClipboard.tsx  CustomAlert.js  CustomAlert.tsx  FaqList.tsx  FeedbackWidget.tsx  HeroSection.tsx  HexPattern.tsx  Newsletter.tsx  Share.tsx  StatsSlider.tsx  TrialContact.tsx  VerticalStepper.tsx
src/layouts/: page.tsx
src/lib/: cache.ts  db.ts  departmentsRegion.ts  hooks.ts  onboarding.ts  ratelimit.ts  remark-alerts.mjs  schema.ts  scrollToHash.ts  string.ts  useActiveSection.ts
src/nginx/: servers.conf.erb
src/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  accessibilite.tsx  carto-deploy-incub-embed.tsx  cartographie-deploiement-bis.tsx  cartographie-deploiement.tsx  healthz.tsx  index.tsx  mentions-legales.tsx  partenaires.tsx  politique-de-confidentialite.tsx  services.tsx
src/styles/: cartographie-conformite.module.css  cartographie-deploiement.module.css  communesearch.css  global.css
src/types/: index.ts  next-auth.d.ts  onboarding.ts
tests-playwright/: accessibilite.spec.ts  healthz.spec.ts  home.spec.ts  mentions-legales.spec.ts  politique-confidentialite.spec.ts  stats.spec.ts
tests-vitest/: index.spec.tsx  onboarding.spec.ts
webcomponents/: demo.html  st-collectivite-search.tsx
(+269 files in other folders)
